<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BytesAPP</string>
    <string name="register_title">Registro</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="btn_ir_registro">¿No tenés cuenta? Registrate</string>
    <string name="btn_ir_login">¿Ya tenés cuenta? Inicia sesión</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="home_title">Inicio</string>
    <string name="master_title">Lista de Donuts</string>
    <string name="detail_title">Detalle</string>
    <string name="error_usuario_corto">El usuario debe tener al menos 8 caracteres</string>
    <string name="error_password_corta">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_password_mayuscula">La contraseña debe tener al menos una mayúscula</string>
    <string name="error_password_no_coincide">Las contraseñas no coinciden</string>
    <string name="error_usuario_existe">El usuario ya existe</string>
    <string name="error_credenciales">Usuario o contraseña incorrectos</string>
    <string name="registro_exitoso">Usuario registrado con éxito</string>
    <string name="error_api">Error al cargar los datos</string>
</resources>
